test/files/neg/badtok-1-212.scala
// scalac: -Xsource:2.12 -deprecation -Xfatal-warnings
// bug 989
'42'


// SI-10133
'''

'';

'
